[gd_scene load_steps=8 format=3 uid="uid://b0tenfnficl2t"]

[ext_resource type="Script" uid="uid://c8l8cdn3g2c5w" path="res://stage5/stage5.gd" id="1_xdha5"]
[ext_resource type="PackedScene" uid="uid://cuxdc162kncle" path="res://bird.tscn" id="4_2w1vm"]
[ext_resource type="PackedScene" uid="uid://dy4ps2daw8sw2" path="res://stage5/hud_stage5.tscn" id="5_bqv3r"]
[ext_resource type="PackedScene" path="res://bird_weapon.tscn" id="5_jttgy"]
[ext_resource type="PackedScene" uid="uid://d28auxtmebbyh" path="res://stage5/boss_2.tscn" id="5_xdha5"]
[ext_resource type="Texture2D" uid="uid://ch55e1uqaxmnx" path="res://assets/background/backgroundbossakhir.png" id="6_bqv3r"]
[ext_resource type="PackedScene" uid="uid://b2g0nvvgrj2g8" path="res://floor_ceil.tscn" id="7_vbnvw"]

[node name="Stage5" type="Node"]
script = ExtResource("1_xdha5")

[node name="Backgroundbossakhir" type="Sprite2D" parent="."]
position = Vector2(360, 240)
texture = ExtResource("6_bqv3r")

[node name="Bird" parent="." instance=ExtResource("4_2w1vm")]
position = Vector2(68, 231)

[node name="BirdWeapon" parent="Bird" instance=ExtResource("5_jttgy")]

[node name="HUDStage5" parent="." instance=ExtResource("5_bqv3r")]

[node name="Boss2" parent="." instance=ExtResource("5_xdha5")]
position = Vector2(613, 272)

[node name="Floor" parent="." instance=ExtResource("7_vbnvw")]

[node name="Ceil" parent="." instance=ExtResource("7_vbnvw")]
position = Vector2(720, 480)
rotation = 3.1415927

[connection signal="collide" from="Bird" to="." method="_on_bird_collide"]
